--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint": "^8.26.0",
     "eslint-config-airbnb": "^19.0.4",
     "prettier": "^2.1.2",
+    "moment": "^2.29.4",
     "nodemon": "^2.0.9"
   }
 }
